pkg/lang/testdata/ub/stack-values/invalid/input-qualified-call.ub
factory: {
  inputs: { x: core.format('hi') }
}
